--- a/ConsoleApplicationNeoTest.csproj
+++ b/ConsoleApplicationNeoTest.csproj
@@ -8,7 +8,7 @@
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ConsoleApplicationNeoTest</RootNamespace>
-    <AssemblyName>ConsoleApplicationNeoTest</AssemblyName>
+    <AssemblyName>Hediet.Neo2</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -43,10 +43,25 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="Tyml">
+      <HintPath>..\Tyml\TymlCSharp\Tyml\bin\Debug\Tyml.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IKeyboard.cs" />
-    <Compile Include="Key.cs" />
+    <Compile Include="ConfigGenerator\ConfigGenerator.cs" />
+    <Compile Include="Config\Configuration.cs" />
+    <Compile Include="Config\KeyDefinition.cs" />
+    <Compile Include="Config\KeyDefinitions.cs" />
+    <Compile Include="Config\KeyMapping.cs" />
+    <Compile Include="Config\CompositionDefinition.cs" />
+    <Compile Include="Config\KeyMappings.cs" />
+    <Compile Include="Config\KeyOrString.cs" />
+    <Compile Include="Config\LayerDefinition.cs" />
+    <Compile Include="Keyboard\IKeyboard.cs" />
+    <Compile Include="Layer\ILayerProvider.cs" />
+    <Compile Include="SemanticKeys\ISemanticKeyMap.cs" />
+    <Compile Include="Keys\Key.cs" />
+    <Compile Include="Keyboard\Keyboard.cs" />
     <Compile Include="KeyboardSimulator\KeyPressDirection.cs" />
     <Compile Include="KeyboardSimulator\Native\Hardwareinput.cs" />
     <Compile Include="KeyboardSimulator\Native\Input.cs" />
@@ -58,22 +73,32 @@
     <Compile Include="KeyboardSimulator\Native\Mousekeybdhardwareinput.cs" />
     <Compile Include="KeyboardSimulator\Native\NativeMethods.cs" />
     <Compile Include="KeyboardSimulator\Native\VirtualKeyCode.cs" />
-    <Compile Include="KeysHelper.cs" />
-    <Compile Include="KeyType.cs" />
-    <Compile Include="NeoKeyboard.cs" />
+    <Compile Include="Keys\KeysHelper.cs" />
+    <Compile Include="Keys\KeyType.cs" />
+    <Compile Include="Layer\Layer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SystemKeyBoard.cs" />
-    <Compile Include="SystemKeyBoardInterceptor.cs" />
+    <Compile Include="SemanticKeys\SemanticKey.cs" />
+    <Compile Include="KeyboardSimulator\SystemKeyBoard.cs" />
+    <Compile Include="SemanticKeys\SemanticKeyMap.cs" />
+    <Compile Include="Keyboard\SystemKeyBoardInterceptor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Data\KeyDefinitions.tyml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="KeyMapping.tyml" />
+    <None Include="Data\KeyMappings.tyml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="keys.txt">
+    <Content Include="Data\keys.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Data\keys2.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
