--- a/KeyboardMapper/KeyboardMapper.csproj
+++ b/KeyboardMapper/KeyboardMapper.csproj
@@ -51,9 +51,8 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Tyml, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Tyml\TymlCSharp\Tyml\bin\Debug\Tyml.dll</HintPath>
+    <Reference Include="Tyml">
+      <HintPath>..\lib\Tyml.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -70,6 +69,7 @@
     <Compile Include="Keyboard\DumpKeyboard.cs" />
     <Compile Include="Keyboard\ArrayComparer.cs" />
     <Compile Include="Keyboard\IKeyboard.cs" />
+    <Compile Include="Keyboard\TcpKeyboard.cs" />
     <Compile Include="Mouse\IMouse.cs" />
     <Compile Include="Mouse\MouseButton.cs" />
     <Compile Include="Mouse\MouseHelper.cs" />
