--- a/KeyboardMapper/packages.config
+++ b/KeyboardMapper/packages.config
@@ -1,4 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Open.WinKeyboardHook" version="1.0.10.0" targetFramework="net45" />
+  <package id="System.Reactive" version="3.0.0" targetFramework="net452" />
+  <package id="System.Reactive.Core" version="3.0.0" targetFramework="net452" />
+  <package id="System.Reactive.Interfaces" version="3.0.0" targetFramework="net452" />
+  <package id="System.Reactive.Linq" version="3.0.0" targetFramework="net452" />
+  <package id="System.Reactive.PlatformServices" version="3.0.0" targetFramework="net452" />
+  <package id="System.Reactive.Windows.Threading" version="3.0.0" targetFramework="net452" />
+  <package id="WPFTabTip" version="1.0.5" targetFramework="net452" />
 </packages>
